force-app/main/default/objects/Lead/fields/network__c.field-meta.xml
<CustomField>
    <fullName>network__c</fullName>
    <label>Network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>