force-app/main/default/objects/Lead/fields/New_Missed_Call_Lead__c.field-meta.xml
<CustomField>
    <fullName>New_Missed_Call_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Missed Call Lead</label>
    <type>Checkbox</type>
</CustomField>