force-app/main/default/objects/Lead/fields/No_Contact_Counter__c.field-meta.xml
<CustomField>
    <fullName>No_Contact_Counter__c</fullName>
    <label>No Contact Counter*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>