force-app/main/default/objects/Lead/fields/num_verified__c.field-meta.xml
<CustomField>
    <fullName>num_verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>num verified</label>
    <type>Checkbox</type>
</CustomField>