force-app/main/default/objects/Lead/fields/Num_verify_failed__c.field-meta.xml
<CustomField>
    <fullName>Num_verify_failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Num verify failed</label>
    <type>Checkbox</type>
</CustomField>