force-app/main/default/objects/Lead/fields/Office_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Office_Address_City__c</fullName>
    <label>Office Address City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Office_Address_State__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Sharjah</fullName>
            </value>
            <value>
                <fullName>Ajman</fullName>
            </value>
            <value>
                <fullName>Fujairah</fullName>
            </value>
            <value>
                <fullName>Ras Al Khaimah</fullName>
            </value>
            <value>
                <fullName>Umm Al Quwain</fullName>
            </value>
            <value>
                <fullName>Achalpur</fullName>
            </value>
            <value>
                <fullName>Achhnera</fullName>
            </value>
            <value>
                <fullName>Adalaj</fullName>
            </value>
            <value>
                <fullName>Adilabad</fullName>
            </value>
            <value>
                <fullName>Adityapur</fullName>
            </value>
            <value>
                <fullName>Adoni</fullName>
            </value>
            <value>
                <fullName>Adoor</fullName>
            </value>
            <value>
                <fullName>Adra</fullName>
            </value>
            <value>
                <fullName>Adyar</fullName>
            </value>
            <value>
                <fullName>Afzalpur</fullName>
            </value>
            <value>
                <fullName>Agartala</fullName>
            </value>
            <value>
                <fullName>Agra</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Ahmedabad City</fullName>
            </value>
            <value>
                <fullName>Ahmednagar</fullName>
            </value>
            <value>
                <fullName>Ajmer</fullName>
            </value>
            <value>
                <fullName>Akola</fullName>
            </value>
            <value>
                <fullName>Akot</fullName>
            </value>
            <value>
                <fullName>Alappuzha</fullName>
            </value>
            <value>
                <fullName>Aligarh</fullName>
            </value>
            <value>
                <fullName>AlipurdUrban Agglomerationr</fullName>
            </value>
            <value>
                <fullName>Alirajpur</fullName>
            </value>
            <value>
                <fullName>Allahabad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>