force-app/main/default/objects/Lead/fields/Office_Address_Postalcode__c.field-meta.xml
<CustomField>
    <fullName>Office_Address_Postalcode__c</fullName>
    <label>Office Address Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>