force-app/main/default/objects/Lead/fields/Office_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Office_Address_State__c</fullName>
    <label>Office Address State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Office_Address_Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>UAE</fullName>
            </value>
            <value>
                <fullName>Andaman and Nicobar Islands</fullName>
            </value>
            <value>
                <fullName>Andhra Pradesh</fullName>
            </value>
            <value>
                <fullName>Arunachal Pradesh</fullName>
            </value>
            <value>
                <fullName>Assam</fullName>
            </value>
            <value>
                <fullName>Bihar</fullName>
            </value>
            <value>
                <fullName>Chandigarh</fullName>
            </value>
            <value>
                <fullName>Chattisgarh</fullName>
            </value>
            <value>
                <fullName>Dadra and Nagar Haveli</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Goa</fullName>
            </value>
            <value>
                <fullName>Gujarat</fullName>
            </value>
            <value>
                <fullName>Haryana</fullName>
            </value>
            <value>
                <fullName>Himachal Pradesh</fullName>
            </value>
            <value>
                <fullName>Jammu &amp; kashmir</fullName>
            </value>
            <value>
                <fullName>Jammu and Kashmir</fullName>
            </value>
            <value>
                <fullName>Jharkhand</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>Kerala</fullName>
            </value>
            <value>
                <fullName>Madhya Pradesh</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Manipur</fullName>
            </value>
            <value>
                <fullName>Meghalaya</fullName>
            </value>
            <value>
                <fullName>Mizoram</fullName>
            </value>
            <value>
                <fullName>Nagaland</fullName>
            </value>
            <value>
                <fullName>Odisha</fullName>
            </value>
            <value>
                <fullName>Puducherry</fullName>
            </value>
            <value>
                <fullName>Punjab</fullName>
            </value>
            <value>
                <fullName>Rajasthan</fullName>
            </value>
            <value>
                <fullName>Tamilnadu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>