force-app/main/default/objects/Lead/fields/Office_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Office_Address_Street__c</fullName>
    <label>Office Address Street</label>
    <type>TextArea</type>
</CustomField>