force-app/main/default/objects/Lead/fields/Office_Phone__c.field-meta.xml
<CustomField>
    <fullName>Office_Phone__c</fullName>
    <label>Alternate Phone</label>
    <type>Phone</type>
</CustomField>