force-app/main/default/objects/Lead/fields/OpportunityProject__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Leads (Opportunity Project)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>