force-app/main/default/objects/Lead/fields/OS__c.field-meta.xml
<CustomField>
    <fullName>OS__c</fullName>
    <label>OS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>