force-app/main/default/objects/Lead/fields/OS_HashValue__c.field-meta.xml
<CustomField>
    <fullName>OS_HashValue__c</fullName>
    <label>OS HashValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>