force-app/main/default/objects/Lead/fields/Owner_Manager_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager_Email_Id__c</fullName>
    <label>Owner Manager Email Id</label>
    <type>Email</type>
</CustomField>