force-app/main/default/objects/Lead/fields/Phone_Hash_Value__c.field-meta.xml
<CustomField>
    <fullName>Phone_Hash_Value__c</fullName>
    <label>Phone Hash Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>