force-app/main/default/objects/Lead/fields/Pin_code__c.field-meta.xml
<CustomField>
    <fullName>Pin_code__c</fullName>
    <label>Pin code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>