force-app/main/default/objects/Lead/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <label>Placement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>