force-app/main/default/objects/Lead/fields/Possession_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Possession_Timeframe__c</fullName>
    <label>Purchase Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>1-6 Months</fullName>
            </value>
            <value>
                <fullName>6-12 Months</fullName>
            </value>
            <value>
                <fullName>More than 12 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>