force-app/main/default/objects/Lead/fields/Possession_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Possession_Timeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possession Timeline</label>
    <type>Checkbox</type>
</CustomField>