force-app/main/default/objects/Lead/fields/Preferred_City_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Preferred_City_of_Interest__c</fullName>
    <label>Preferred City of Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>