force-app/main/default/objects/Lead/fields/Preferred_City_of_Interestpicklist__c.field-meta.xml
<CustomField>
    <fullName>Preferred_City_of_Interestpicklist__c</fullName>
    <label>Preferred City of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dubai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>