force-app/main/default/objects/Lead/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Preferred_Language</valueSetName>
    </valueSet>
</CustomField>