force-app/main/default/objects/Lead/fields/Preferred_Language_Promoters__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language_Promoters__c</fullName>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ar</fullName>
            </value>
            <value>
                <fullName>cn</fullName>
            </value>
            <value>
                <fullName>en</fullName>
            </value>
            <value>
                <fullName>ru</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>