force-app/main/default/objects/Lead/fields/Preferred_Property_Status__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Property_Status__c</fullName>
    <label>Preferred Property Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Off Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>