force-app/main/default/objects/Lead/fields/Presales_First_Call_Sub_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Presales_First_Call_Sub_Disposition__c</fullName>
    <label>Presales First Call Sub Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>