force-app/main/default/objects/Lead/fields/Presales_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Presales_Team_Member__c</fullName>
    <label>Presales Team Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member 1</fullName>
            </value>
            <value>
                <fullName>Member 2</fullName>
            </value>
            <value>
                <fullName>Member 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>