force-app/main/default/objects/Lead/fields/Previous_Last_Call_Attempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Last_Call_Attempt_Status__c</fullName>
    <defaultValue>&quot;Not Actioned&quot;</defaultValue>
    <label>Previous_Last_Call_Attempt_Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>