force-app/main/default/objects/Lead/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <label>Primary Email</label>
    <type>TextArea</type>
</CustomField>