force-app/main/default/objects/Lead/fields/Primary_Mobile_Number_E__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mobile_Number_E__c</fullName>
    <label>Primary Mobile Number (E)</label>
    <type>TextArea</type>
</CustomField>