force-app/main/default/objects/Lead/fields/Primary_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Number__c</fullName>
    <label>Primary Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>