force-app/main/default/objects/Lead/fields/Primary_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Primary_Number_Formula__c</fullName>
    <formula>IF(Primary_Number__c != null, IF(LEFT(Primary_Number__c, 1) == &apos;0&apos;, Primary_Number__c, &apos;0&apos;+Primary_Number__c), IF((ISPICKVAL(RDS_Country_Code__c, &apos;+971&apos;) || ISPICKVAL(RDS_Country_Code__c, &apos;&apos;) || ISPICKVAL(RDS_Country_Code__c, &apos;+&apos;) || ISPICKVAL(RDS_Country_Code__c, &apos;971&apos;)), IF(LEFT(MobilePhone, 1) == &apos;0&apos;, MobilePhone, &apos;0&apos;+MobilePhone), &apos;00&apos;+MID(TEXT(RDS_Country_Code__c), 2, LEN(TEXT(RDS_Country_Code__c)))+MobilePhone))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Number Formula</label>
    <type>Text</type>
</CustomField>