force-app/main/default/objects/Lead/fields/Primary_Postal__c.field-meta.xml
<CustomField>
    <fullName>Primary_Postal__c</fullName>
    <label>Primary Postal</label>
    <length>15</length>
    <type>Text</type>
</CustomField>