force-app/main/default/objects/Lead/fields/Primary_State__c.field-meta.xml
<CustomField>
    <fullName>Primary_State__c</fullName>
    <label>Primary State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Andhra Pradesh</fullName>
            </value>
            <value>
                <fullName>Arunachal Pradesh</fullName>
            </value>
            <value>
                <fullName>Assam</fullName>
            </value>
            <value>
                <fullName>Bihar</fullName>
            </value>
            <value>
                <fullName>Goa</fullName>
            </value>
            <value>
                <fullName>Gujarat</fullName>
            </value>
            <value>
                <fullName>Haryana</fullName>
            </value>
            <value>
                <fullName>Himachal Pradesh</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Jharkhand</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>Kashmir</fullName>
            </value>
            <value>
                <fullName>Kerala</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Madhya Pradesh</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>New Delhi</fullName>
            </value>
            <value>
                <fullName>Odisa</fullName>
            </value>
            <value>
                <fullName>Punjab</fullName>
            </value>
            <value>
                <fullName>Rajasthan</fullName>
            </value>
            <value>
                <fullName>Tamil Nadu</fullName>
            </value>
            <value>
                <fullName>Telangana</fullName>
            </value>
            <value>
                <fullName>Uttarakhand</fullName>
            </value>
            <value>
                <fullName>Uttar Pradesh</fullName>
            </value>
            <value>
                <fullName>West Bengal</fullName>
            </value>
            <value>
                <fullName>UAE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>