force-app/main/default/objects/Lead/fields/priority_bucket__c.field-meta.xml
<CustomField>
    <fullName>priority_bucket__c</fullName>
    <formula>if(is_serviced__c == false &amp;&amp;    ISNULL(First_Call_Attempt_Date__c) &amp;&amp; DATEVALUE(CreatedDate) &gt;= DATE(2020,01,13)   &amp;&amp;  NOT(ISPICKVAL(Status  , &apos;Lost&apos;)), &apos;FRESH&apos;,
     if(is_serviced__c == false &amp;&amp; DATEVALUE( Date_and_Time_of_Unserviced_Lead__c ) &gt;= DATE(2020,01,13) &amp;&amp;  NOT(ISPICKVAL(Status  , &apos;Lost&apos;)), &apos;REENQUIRY&apos; ,
        if( NOT ISNULL(Latest_Next_Action_Date__c) &amp;&amp;  DATEVALUE(Latest_Next_Action_Date__c ) &lt;= TODAY() &amp;&amp;  (Last_Call_Attempt_Date__c &lt; Latest_Next_Action_Date__c) &amp;&amp;  Last_Call_Attempt_Status__c == &apos;No Contact&apos; &amp;&amp; DATEVALUE(Latest_Next_Action_Date__c )&gt;=DATE(2020,01,13) &amp;&amp;  NOT(ISPICKVAL(Status  , &apos;Lost&apos;)), 
   &apos;NO CONTACT - FOLLOW UP&apos;  ,
           if( NOT ISNULL(Latest_Next_Action_Date__c) &amp;&amp;  DATEVALUE(Latest_Next_Action_Date__c ) &lt;= TODAY() &amp;&amp;  (Last_Call_Attempt_Date__c &lt; Latest_Next_Action_Date__c) &amp;&amp; DATEVALUE(Latest_Next_Action_Date__c )&gt;=DATE(2020,01,13) &amp;&amp;  NOT(ISPICKVAL(Status  , &apos;Lost&apos;)) , &apos;FOLLOW UP&apos; ,
          &apos;NONE&apos;
            )
       )
     )
)</formula>
    <label>priority bucket</label>
    <type>Text</type>
</CustomField>