force-app/main/default/objects/Lead/fields/Projects_Interested__c.field-meta.xml
<CustomField>
    <fullName>Projects_Interested__c</fullName>
    <label>Other Projects Interested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Codename Mumbai Dreams</fullName>
            </value>
            <value>
                <fullName>Joyville Hinjewadi</fullName>
            </value>
            <value>
                <fullName>Joyville Virar</fullName>
            </value>
            <value>
                <fullName>Parkwest</fullName>
            </value>
            <value>
                <fullName>Alpine</fullName>
            </value>
            <value>
                <fullName>Astron</fullName>
            </value>
            <value>
                <fullName>Epsilon</fullName>
            </value>
            <value>
                <fullName>Lumiere</fullName>
            </value>
            <value>
                <fullName>Imperial</fullName>
            </value>
            <value>
                <fullName>SP Residency</fullName>
            </value>
            <value>
                <fullName>Vicinia</fullName>
            </value>
            <value>
                <fullName>Shukhobrishti</fullName>
            </value>
            <value>
                <fullName>Imperial edge</fullName>
            </value>
            <value>
                <fullName>Joyville - Howrah</fullName>
            </value>
            <value>
                <fullName>SP Infocity - Manesar</fullName>
            </value>
            <value>
                <fullName>SP Infocity - Mohali</fullName>
            </value>
            <value>
                <fullName>SP Infocity - Nagpur</fullName>
            </value>
            <value>
                <fullName>SP Infocity - Pune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>