force-app/main/default/objects/Lead/fields/Projects_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Projects_of_Interest__c</fullName>
    <label>Projects of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JP North</fullName>
            </value>
            <value>
                <fullName>JP Project 2</fullName>
            </value>
            <value>
                <fullName>JP Decks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>