force-app/main/default/objects/Lead/fields/Promoters__c.field-meta.xml
<CustomField>
    <fullName>Promoters__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoters</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads4</relationshipName>
    <type>Lookup</type>
</CustomField>