force-app/main/default/objects/Lead/fields/Promotors_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Promotors_Remarks__c</fullName>
    <label>Promotors Remarks</label>
    <type>TextArea</type>
</CustomField>