force-app/main/default/objects/Lead/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Plots</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Mansions</fullName>
            </value>
            <value>
                <fullName>Villaments</fullName>
            </value>
            <value>
                <fullName>Penthouses</fullName>
            </value>
            <value>
                <fullName>Apartments</fullName>
            </value>
            <value>
                <fullName>Villas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>