force-app/main/default/objects/Lead/fields/PS_Date_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>PS_Date_of_Visit__c</fullName>
    <formula>Date_of_Visit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Date of Visit</label>
    <type>Date</type>
</CustomField>