force-app/main/default/objects/Lead/fields/PSFirstName__c.field-meta.xml
<CustomField>
    <fullName>PSFirstName__c</fullName>
    <formula>If(!ISBLANK(LastName), FirstName ,&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>