force-app/main/default/objects/Lead/fields/Qualification_Details__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Details__c</fullName>
    <label>Qualification Details</label>
    <type>TextArea</type>
</CustomField>