force-app/main/default/objects/Lead/fields/Qualified_Not_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Not_Qualified__c</fullName>
    <formula>IF(OR(Last_Call_Attempt_Status__c == &apos;No Contact&apos;, 
Last_Call_Attempt_Status__c == &apos;Invalid Enquiry&apos;, 
Last_Call_Attempt_Status__c == &apos;Invalid Number&apos;,
Call_Dispositions__c == &apos;Others&apos;) 
, &apos;NO&apos;, &apos;YES&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualified / Not Qualified</label>
    <type>Text</type>
</CustomField>