force-app/main/default/objects/Lead/fields/RDS_Alternate_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>RDS_Alternate_Email_Id__c</fullName>
    <label>Alternate Email Id</label>
    <type>Email</type>
</CustomField>