force-app/main/default/objects/Lead/fields/RDS_Budget__c.field-meta.xml
<CustomField>
    <fullName>RDS_Budget__c</fullName>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2 to 3 Cr</fullName>
            </value>
            <value>
                <fullName>3 to 4 Cr</fullName>
            </value>
            <value>
                <fullName>5 to 7 Cr</fullName>
            </value>
            <value>
                <fullName>7 to 9 Cr</fullName>
            </value>
            <value>
                <fullName>Above 9 Cr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>